# RUSSH

./: .gitignore  CRITICAL_FIXES.md  Cargo.toml  PRODUCTION_REVIEW.md  README.md  analyze.md  deny.toml  push.sh
.github/actions/setup-env/: action.yml
.github/actions/tauri-unsigned-ipa/: action.yml
.github/scripts/: patch_ios_project.py
.github/workflows/: _build-android.yml  _build-desktop.yml  _build-ios.yml  _build-mobile.yml  _rust.yml  _test-frontend.yml  _test.yml  build-unsigned-ipa.yml  ci.yml  mobile.yml  pages.yml  release.yml
.kiro/specs/p2p-interactive-terminal/: requirements.md
.kiro/specs/tauri-client/: design.md  requirements.md  tasks.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  P2P_TERMINAL.md  VISUAL_EFFECTS.md
russh-client/: README.md  build-unsigned.md  index.html  index.mock.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.mock.ts  vite.config.ts  vitest.config.ts
russh-client/src/: App.vue
russh-client/src-tauri/: Cargo.toml  tauri.conf.json
russh-client/src-tauri/icons/: icon.icns
russh-client/src-tauri/src/: error.rs  lib.rs  main.rs
russh-client/src-tauri/src/commands/: files.rs  mod.rs  p2p.rs  profiles.rs  settings.rs  ssh.rs  streaming.rs
russh-client/src-tauri/src/state/: app_state.rs  mod.rs  session_state.rs
russh-client/src/__tests__/: setup.ts
russh-client/src/__tests__/components/: ConnectionCard.test.ts
russh-client/src/__tests__/e2e/: app.spec.ts
russh-client/src/__tests__/stores/: connections.test.ts
russh-client/src/assets/styles/: main.css  terminal.css
russh-client/src/components/common/: AppHeader.vue  AppSidebar.vue  CommandPalette.vue  ContextMenu.vue  LoadingSpinner.vue  NotificationContainer.vue  PixelButton.vue  PixelCard.vue
russh-client/src/components/connections/: ConnectionCard.vue  ConnectionForm.vue  ConnectionItem.vue  ConnectionList.vue  ConnectionStatus.vue  QuickConnect.vue
russh-client/src/components/extra/: Lightning-usage.txt  Lightning.vue  Magnet-usage.txt  Magnet.vue  Noise-usage.txt  (+4 more)
russh-client/src/composables/: useAccessibility.ts  useBackgroundConnection.ts  useBiometric.ts  useDeepLink.ts  useFileTransfer.ts  useGestures.ts  useKeyboard.ts  useNotification.ts  useP2P.ts  useP2PMessaging.ts  usePlatform.ts  useSSH.ts  useStreaming.ts  useTerminal.ts  useTheme.ts  useVisualEffects.ts
russh-client/src/mocks/: index.ts  tauri-api.ts  tauri-plugins.ts  tauri.ts
russh-client/src/router/: index.ts
russh-client/src/stores/: connections.ts  index.ts  notifications.ts  p2pTerminal.ts  settings.ts  terminals.ts
russh-client/src/types/: blocks.ts  errors.ts  files.ts  index.ts  p2p.ts  settings.ts  ssh.ts  streaming.ts  visualEffects.ts
russh-client/src/utils/: terminalThemes.ts
russh-client/src/views/: ConnectionsView.vue  DashboardView.vue  EditConnectionView.vue  FilesView.vue  LandingView.vue  NewConnectionView.vue  P2PTerminalView.vue  P2PView.vue  SettingsView.vue  StreamingView.vue  TerminalView.vue
russh-ssh/: Cargo.toml  output2.txt
russh-ssh-cli/: Cargo.toml
russh-ssh-cli/src/: main.rs
russh-ssh/src/: config.rs  connection.rs  encryption.rs  error.rs  lib.rs  p2p.rs  session.rs  streaming.rs  vdfs.rs
russh-ssh/src/connection/: manager.rs  reconnection.rs  state.rs
russh-ssh/src/encryption/: cipher.rs  hash.rs  secure_channel.rs
russh-ssh/src/p2p/: connection.rs  endpoint.rs  stream.rs
russh-ssh/src/session/: manager.rs  profile.rs
russh-ssh/src/ssh/: client.rs  command.rs  forward.rs  mod.rs  sftp.rs
russh-ssh/src/streaming/: buffer.rs  handler.rs  video.rs
russh-ssh/src/vdfs/: chunk.rs  filesystem.rs  metadata.rs  sync.rs
russh-ssh/tests/: property_tests.rs
russh-ssh/tests/property/: buffer_props.rs  comprehensive_props.rs  connection_props.rs  encryption_props.proptest-regressions  encryption_props.rs  mod.rs  reconnection_props.rs  security_props.rs  session_props.rs  state_props.rs  vdfs_props.rs
(+34 files in other folders)
