[package]
name = "russh-client"
version = "0.1.0"
description = "Cross-Device SSH Client"
authors = ["RUSSH Team"]
license = "MIT"
repository = ""
edition = "2021"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-biometric = "2.0"
tauri-plugin-haptics = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Directories
dirs = "5.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# QR Code generation
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# Secure credential storage
keyring = "2.3"

# Local russh-ssh library
russh-ssh = { path = "../../russh-ssh" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
